--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -18518,7 +18518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "source": [
     "df.drop(index=2)   "
    ],
@@ -18566,26 +18566,18 @@
        "      <td>Red</td>\n",
        "      <td>Feb</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>Green</td>\n",
-       "      <td>Mar</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Numbers Countries  Color new_col1\n",
-       "0        1        DE   Blue      Jan\n",
-       "1        2        FR    Red      Feb\n",
-       "2        3        IT  Green      Mar"
+       "   Numbers Countries Color new_col1\n",
+       "0        1        DE  Blue      Jan\n",
+       "1        2        FR   Red      Feb"
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 44
     }
    ],
    "metadata": {}
